--- a/app/src/main/res/layout/compare_item_layout.xml
+++ b/app/src/main/res/layout/compare_item_layout.xml
@@ -41,19 +41,35 @@
                     android:contentDescription="@string/img_description_avatar"
                     android:src="@drawable/avatar_placeholder" />
 
-                <TextView
-                    android:id="@+id/compare_tv_author"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:ellipsize="end"
-                    android:maxEms="14"
-                    android:maxLines="1"
-                    android:paddingLeft="@dimen/card_content_large_padding"
-                    android:paddingRight="@dimen/card_content_large_padding"
-                    android:textColor="@color/colorTextLink"
-                    android:textSize="@dimen/medium_text_size"
-                    tools:text="Александр Мариновский" />
+                    android:orientation="vertical"
+                    android:paddingLeft="8dp">
+
+                    <TextView
+                        android:id="@+id/compare_tv_author"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:maxEms="14"
+                        android:maxLines="1"
+                        android:textColor="@color/colorTextLink"
+                        android:textSize="@dimen/medium_text_size"
+                        tools:text="Александр Мариновский" />
+
+                    <TextView
+                        android:id="@+id/compare_tv_date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:lines="1"
+                        android:maxLength="16"
+                        android:textColor="@color/colorTextSecondary"
+                        android:textSize="@dimen/medium_text_size"
+                        tools:text="17th Jan 2016" />
+
+                </LinearLayout>
 
             </LinearLayout>
 
@@ -185,12 +201,12 @@
             android:paddingTop="@dimen/card_content_large_padding">
 
             <TextView
-                android:id="@+id/compare_tv_date"
+                android:id="@+id/compare_tv_category"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/colorTextSecondary"
                 android:textSize="@dimen/medium_text_size"
-                tools:text="17th Jan 2016" />
+                tools:text="Entertainment" />
 
             <TextView
                 android:id="@+id/compare_tv_status"
@@ -198,7 +214,8 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:textColor="@color/colorTextSecondary"
-                android:textSize="@dimen/medium_text_size" />
+                android:textSize="@dimen/medium_text_size"
+                tools:text="Closed" />
 
         </RelativeLayout>
 
