upgrade ui elements

--- a/app/src/main/res/drawable/circle_pressed.xml
+++ b/app/src/main/res/drawable/circle_pressed.xml
@@ -4,7 +4,7 @@
     <item>
         <shape android:shape="oval">
             <solid android:color="@android:color/transparent"/>
-            <stroke android:width="2dp" android:color="#aeaeae"/>
+            <stroke android:width="2dp" android:color="#ffffff"/>
         </shape>
     </item>
 </selector>
