--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -37,12 +37,6 @@
                 android:layout_gravity="center">
 
                 <ImageView
-                    android:src="@drawable/circle"
-                    android:layout_gravity="center"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
-
-                <ImageView
                     android:id="@+id/iv_sign_up_photo"
                     android:layout_width="70dp"
                     android:layout_height="70dp"
@@ -63,7 +57,13 @@
                     android:layout_gravity="center_horizontal|bottom"
                     android:layout_marginBottom="15dp"
                     android:text="Photo"
-                    android:textColor="@color/colorTextSecondary" />
+                    android:textColor="#aeaeae" />
+
+                <ImageView
+                    android:src="@drawable/circle_avatar_selector"
+                    android:layout_gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
             </FrameLayout>
 
             <android.support.design.widget.TextInputLayout
