--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -122,19 +122,45 @@
             android:gravity="center_horizontal"
             android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/sign_in_facebook"
-                android:layout_width="55dp"
-                android:layout_height="55dp"
-                android:layout_marginRight="4dp"
-                android:src="@mipmap/icon_facebook_circle" />
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center">
 
-            <ImageView
-                android:id="@+id/sign_in_google"
-                android:layout_width="55dp"
-                android:layout_height="55dp"
-                android:layout_marginLeft="4dp"
-                android:src="@mipmap/icon_google_plus_circle" />
+                <ImageView
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/shadow_circle" />
+
+                <ImageView
+                    android:layout_marginLeft="1dp"
+                    android:id="@+id/sign_in_facebook"
+                    android:layout_width="55dp"
+                    android:layout_height="55dp"
+                    android:src="@mipmap/icon_facebook_circle" />
+
+            </FrameLayout>
+
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center">
+
+                <ImageView
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/shadow_circle" />
+
+                <ImageView
+                    android:layout_marginLeft="1dp"
+                    android:id="@+id/sign_in_google"
+                    android:layout_width="55dp"
+                    android:layout_height="55dp"
+                    android:src="@mipmap/icon_google_plus_circle" />
+
+            </FrameLayout>
 
         </LinearLayout>
 
