--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -49,7 +49,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center_horizontal|top"
-                    android:layout_margin="5dp" />
+                    android:layout_margin="5dp"
+                    android:visibility="gone" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -168,16 +169,11 @@
 
             <Button
                 android:id="@+id/btn_sign_up"
+                style="@style/AppTheme.Button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginTop="12dp"
                 android:background="@drawable/button_sign_selector"
-                android:text="SIGN UP"
-                android:textAllCaps="true"
-                android:textColor="#FFFFFF"
-                android:textSize="16sp" />
+                android:text="SIGN UP" />
 
 
             <TextView
