--- a/app/src/main/res/drawable/shadow_button.xml
+++ b/app/src/main/res/drawable/shadow_button.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <gradient android:type="radial" android:endColor="@android:color/transparent" android:startColor="#2d2d2d" android:gradientRadius="50"/>
+            <gradient android:angle="90" android:endColor="#292929" android:startColor="@android:color/transparent" />
         </shape>
     </item>
 </selector>
