--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
@@ -81,19 +82,19 @@
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="54dp"
+                android:layout_height="56dp"
                 android:layout_marginLeft="20dp"
-                android:layout_marginRight="16dp"
-                android:background="@drawable/shadow_button" />
+                android:layout_marginRight="17dp"
+                android:background="@drawable/shadow_button"
+                tools:targetApi="JELLY_BEAN" />
 
-            <!--<Button-->
-                <!--android:id="@+id/sign_in_btn_login"-->
-                <!--style="@style/AppTheme.Button"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:background="@drawable/button_sign_selector"-->
-                <!--android:text="@string/label_login" />-->
-
+            <Button
+                android:id="@+id/sign_in_btn_login"
+                style="@style/AppTheme.Button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/button_sign_selector"
+                android:text="@string/label_login" />
         </FrameLayout>
 
         <TextView
