--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -7,10 +7,12 @@
     android:fitsSystemWindows="true">
 
     <android.support.design.widget.AppBarLayout
+        android:id="@+id/app_bar_profile"
         android:layout_width="match_parent"
         android:layout_height="180dp"
         android:fitsSystemWindows="true"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:layout_scrollFlags="snap">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:layout_width="match_parent"
@@ -50,6 +52,12 @@
         android:layout_below="@id/toolbar_details"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+        <FrameLayout
+            android:id="@+id/profile_search_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone" />
+
         <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/swipe_to_refresh_profile"
             android:layout_width="match_parent"
@@ -71,7 +79,7 @@
                         android:layout_marginBottom="@dimen/card_margin_vertical"
                         android:layout_marginLeft="@dimen/card_margin_horizontal"
                         android:layout_marginRight="@dimen/card_margin_horizontal"
-                        android:clickable="true"
+                        android:clickable="false"
                         android:foreground="@drawable/card_foreground"
                         app:cardElevation="@dimen/card_elevation">
 
