--- a/app/src/main/res/drawable/circle_avatar_selector.xml
+++ b/app/src/main/res/drawable/circle_avatar_selector.xml
@@ -3,5 +3,5 @@
     <item android:drawable="@drawable/circle_pressed" android:state_focused="true" android:state_pressed="false" />
     <item android:drawable="@drawable/circle_pressed" android:state_focused="true" android:state_pressed="true" />
     <item android:drawable="@drawable/circle_pressed" android:state_focused="false" android:state_pressed="true" />
-    <item android:drawable="@drawable/circle" />
+    <item android:drawable="@drawable/ring" />
 </selector>
