add preview screen for add compare

--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -31,6 +31,7 @@
                 android:id="@+id/details_rv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:overScrollMode="never"
                 android:scrollbars="none" />
 
         </android.support.v4.widget.SwipeRefreshLayout>
