--- a/app/src/main/res/layout/fragment_preview_compare.xml
+++ b/app/src/main/res/layout/fragment_preview_compare.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="16dp"
+    android:contextClickable="false"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -14,14 +15,13 @@
         android:layout_marginTop="16dp">
 
         <LinearLayout
-            android:id="@+id/details_ll_author"
+            android:id="@+id/preview_ll_author"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/author_layout_selector"
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/details_iv_avatar"
+                android:id="@+id/preview_iv_avatar"
                 android:layout_width="@dimen/small_avatar_size"
                 android:layout_height="@dimen/small_avatar_size"
                 android:src="@drawable/icon_no_avatar" />
@@ -34,7 +34,7 @@
                 android:paddingLeft="8dp">
 
                 <TextView
-                    android:id="@+id/details_tv_author"
+                    android:id="@+id/preview_tv_author"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
@@ -45,7 +45,7 @@
                     tools:text="Александр Мариновский" />
 
                 <TextView
-                    android:id="@+id/details_tv_date"
+                    android:id="@+id/preview_tv_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:lines="1"
@@ -59,7 +59,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/details_tv_status"
+            android:id="@+id/preview_tv_status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
@@ -67,19 +67,10 @@
             android:textColor="@android:color/black"
             android:textSize="@dimen/medium_text_size" />
 
-        <android.support.v7.widget.SwitchCompat
-            android:id="@+id/details_switch_status"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_below="@id/details_tv_status"
-            android:layout_marginTop="4dp"
-            android:visibility="gone" />
-
     </RelativeLayout>
 
     <TextView
-        android:id="@+id/details_tv_question"
+        android:id="@+id/preview_tv_question"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -89,7 +80,7 @@
         tools:text="Where is better pizza?" />
 
     <LinearLayout
-        android:id="@+id/ll_variants"
+        android:id="@+id/preview_ll_variants"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
@@ -103,14 +94,14 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/details_iv_first_image"
+                android:id="@+id/preview_iv_first_image"
                 android:layout_width="110dp"
                 android:layout_height="110dp"
                 android:padding="8dp"
                 android:src="@drawable/standard_photo" />
 
             <TextView
-                android:id="@+id/details_tv_first_variant"
+                android:id="@+id/preview_tv_first_variant"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -122,7 +113,7 @@
                 android:textSize="16sp" />
 
             <CheckBox
-                android:id="@+id/details_ch_like_first"
+                android:id="@+id/preview_ch_like_first"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -143,14 +134,14 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/details_iv_second_image"
+                android:id="@+id/preview_iv_second_image"
                 android:layout_width="110dp"
                 android:layout_height="110dp"
                 android:padding="8dp"
                 android:src="@drawable/standard_photo" />
 
             <TextView
-                android:id="@+id/details_tv_second_variant"
+                android:id="@+id/preview_tv_second_variant"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -162,7 +153,7 @@
                 android:textSize="16sp" />
 
             <CheckBox
-                android:id="@+id/details_ch_like_second"
+                android:id="@+id/preview_ch_like_second"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -178,30 +169,14 @@
 
     </LinearLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/preview_tv_category"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="16dp">
-
-        <TextView
-            android:id="@+id/details_tv_category"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/colorTextSecondary"
-            android:textSize="@dimen/medium_text_size"
-            tools:text="Entertainment" />
-
-        <TextView
-            android:id="@+id/details_tv_comments_count"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:textColor="@color/colorTextSecondary"
-            android:textSize="@dimen/medium_text_size"
-            tools:text="Closed" />
-
-    </RelativeLayout>
+        android:layout_marginTop="16dp"
+        android:textColor="@color/colorTextSecondary"
+        android:textSize="@dimen/medium_text_size"
+        tools:text="Entertainment" />
 
 </LinearLayout>
