--- a/app/src/main/res/menu/menu_compare_owner.xml
+++ b/app/src/main/res/menu/menu_compare_owner.xml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/action_edit_status"
+        android:title="" />
+    <item
         android:id="@+id/action_details_compare"
         android:title="Details" />
     <item
         android:id="@+id/action_share_compare"
         android:title="Share" />
-    <item
-        android:id="@+id/action_edit_compare"
-        android:title="Edit" />
-    <item
-        android:id="@+id/action_delete_compare"
-        android:title="Delete" />
 </menu>
