--- a/app/src/main/res/menu/menu_forward.xml
+++ b/app/src/main/res/menu/menu_forward.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_done"
-        android:icon="@drawable/icon_done"
-        android:title="Share"
+        android:id="@+id/action_forward"
+        android:icon="@drawable/icon_forward"
+        android:title="Forward"
         app:showAsAction="always" />
 </menu>
