--- a/app/src/main/res/layout/fragment_image_view.xml
+++ b/app/src/main/res/layout/fragment_image_view.xml
@@ -1,27 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/black"
-    tools:context=".screens.activities.ViewImageActivity">
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar_view_image"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        app:title="Neapol"
-        app:titleTextColor="@android:color/white" />
+    tools:context=".screens.activities.ImageViewActivity">
 
     <ImageView
-        android:id="@+id/view_image_iv"
+        android:id="@+id/view_image_iv_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:src="@drawable/test_img" />
+        android:layout_centerVertical="true" />
 
     <CheckBox
+        android:id="@+id/view_image_ch_likes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
