--- a/app/src/main/res/drawable/splash.xml
+++ b/app/src/main/res/drawable/splash.xml
@@ -2,12 +2,12 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <solid android:color="@android:color/white" />
+            <solid android:color="@color/colorPrimary" />
         </shape>
     </item>
     <item>
         <bitmap
             android:gravity="center"
-            android:src="@drawable/logo" />
+            android:src="@drawable/logo_small" />
     </item>
 </layer-list>
