--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -91,12 +91,13 @@
                             <Button
                                 android:id="@+id/profile_btn_follow"
                                 android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
+                                android:layout_height="40dp"
                                 android:layout_gravity="center_horizontal"
                                 android:layout_marginTop="16dp"
                                 android:background="@drawable/button_follow_selector"
                                 android:text="@string/btn_label_follow"
                                 android:textColor="@color/colorTextButton"
+                                android:textSize="14sp"
                                 android:visibility="gone" />
 
                             <android.support.v7.widget.RecyclerView
