--- a/app/src/main/res/layout/fragment_image_view.xml
+++ b/app/src/main/res/layout/fragment_image_view.xml
@@ -10,7 +10,8 @@
         android:id="@+id/view_image_iv_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true" />
+        android:layout_centerVertical="true"
+        android:src="@drawable/standard_photo" />
 
     <CheckBox
         android:id="@+id/view_image_ch_likes"
@@ -21,7 +22,6 @@
         android:layout_marginLeft="16dp"
         android:button="@drawable/icon_like_white_selector"
         android:paddingLeft="6dp"
-        android:text="123"
         android:textColor="@android:color/white"
         android:textSize="16sp" />
 
