--- a/app/src/main/res/menu/menu_compare_owner.xml
+++ b/app/src/main/res/menu/menu_compare_owner.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/action_edit_status"
-        android:title="" />
+        android:id="@+id/action_change_status"
+        android:title="Close compare" />
     <item
         android:id="@+id/action_details_compare"
         android:title="Details" />
-    <item
-        android:id="@+id/action_share_compare"
-        android:title="Share" />
 </menu>
